--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@ font-family: 'Inter', sans-serif;
 font-family: 'Roboto', sans-serif; 
 font-family: 'Dancing Script';
 font-family: 'Raleway';
+font-family: 'DM Serif Display', serif;
 */
 /* Importación de fuentes de google fonts */ 
 @import url(https://fonts.googleapis.com/css?family=Noto+Sans);
@@ -71,13 +72,17 @@ nav ul li a{
   font-family: Roboto;
   text-align: center;
 }
+.nav a:hover {
+  color: #9867C5;
+  border-bottom: 3px solid #9867C5;
+}
 /*----------------- index (html)------------------*/
 main{
   background-color: darkgray;
 }
 .contenedor_central{ /* contenedor central */
   width: 100vw;
-  height: 630px;
+  height: 670px;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -86,7 +91,6 @@ main{
 }
 .fondo{
   height: 100vh;
-  /*background: url(../imagenes/panoramicas/tienda.png);*/
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -99,25 +103,28 @@ main{
   text-align: center;
 }
 section div h3 { /* slogan */
-  font-family: Inter;
   color: white;
   text-shadow: 0 0 8px rgba(0, 0, 0, 0.8);
   font-size: 1.7rem;
 }
 .slogan .nombre h3{
+  font-family: 'DM Serif Display', serif;
   color: aqua;
-  font-size: 1.7rem;
+  font-size: 3rem;
+  letter-spacing: 5px;
 }
 .slogan span h3{
   font-size: 1.2rem;
+  font-family: Inter;
 }
 .que_tenemos{
   width: 70%;
   margin: 0 auto;
 }
-h5{
+.que_tenemos h5{
   color: #fff;
-  font-size: 1.35rem;
+  font-style: italic;
+  font-size: 1.05rem;
 }
 .boton_conocenos{ /* posicionamiento del botón */
   top: 60%;
@@ -139,11 +146,16 @@ main section div ul li a{
   color: black;
   font-size: 1.3rem;
 }
+/* generacion de la animacion del fondo */
+@keyframes animacion{
+  0%{background-position: 0 50%;}
+  50%{background-position: 100% 50%;}
+  100%{background-position: 0 50%;}
+}
 
 /*------------ quienes_somos (html)---------------------------*/
-article{ /* contenedor padre QS */
+#container_qs{ /* contenedor padre QS */
   margin-top: 180px;
-  
   display: grid;
   grid-template-columns: 70% 30%;
   grid-template-rows: 0.55fr 0.75fr 0.25fr 0.75fr 0.25fr 0.75fr;
@@ -157,7 +169,6 @@ article{ /* contenedor padre QS */
   ;
 }  
 .titulo_QS{
-  /*background-color: black;*/
   grid-area: titulo;
 }
 article h1{ /* titulo de la pagina QS*/
@@ -166,8 +177,7 @@ article h1{ /* titulo de la pagina QS*/
   font-style: italic;
 }
 .parrafo0_QS{ /* texto del parrafo 0*/
-  /*background-color: forestgreen;*/
-  color: burlywood;
+  color: rgb(169, 207, 107);
   grid-area: parrafo_0;
   padding-left: 30px;
   padding-top: 5px; 
@@ -181,7 +191,6 @@ article div p{
   font-size: 17px;
 }
 .subtitulo_1{ /* subtitulo del parrafo 1*/
-  /*background-color: black;*/
   grid-area: sub_1;
   padding: 20px;
   padding-top: 20px;
@@ -192,8 +201,7 @@ article div p{
   color: silver;
 }
 .parrafo1_QS{ /* texto del parrafo 1*/
-  /*background-color: black;*/
-  color: burlywood;
+  color: rgb(169, 207, 107);
   grid-area: parrafo_1;
   padding-left: 30px;
   padding-top: 5px; 
@@ -201,7 +209,6 @@ article div p{
   text-align: justify;
 }
 .subtitulo_2{ /* subtitulo del parrafo 2*/
-  /*background-color: black;*/
   grid-area: sub_2;
   padding: 20px;
   font-family: Cormorant Infant;
@@ -211,8 +218,7 @@ article div p{
   color: silver;
 }
 .parrafo2_QS{ /* texto del parrafo 2*/
-  /*background-color: black;*/
-  color: burlywood;
+  color: rgb(169, 207, 107);
   grid-area: parrafo_2;
   padding-left: 30px;
   padding-top: 5px; 
@@ -220,7 +226,6 @@ article div p{
   text-align: justify;
 }
 .imagen_derecha{
-  /*background-color: black;*/
   grid-area: img;
   padding-left: 90px;
   padding-top: 10px;
@@ -231,99 +236,102 @@ section{
   width: 100%;
   height: 100vh;
   color: #fff;
-  background: linear-gradient(45deg,red,blue,green,black);
+  background: linear-gradient(45deg,rgb(21, 41, 85),rgb(28, 28, 46),rgb(25, 34, 25),black);
+  /*background: linear-gradient(45deg,red,blue,green,black);*/
   background-size: 400% 400%;
   position: relative;
   animation: animacion 10s ease infinite; /* animacion del fondo */
 }
-/* generacion de la animacion del fondo */
-@keyframes animacion{
-  0%{background-position: 0 50%;}
-  50%{background-position: 100% 50%;}
-  100%{background-position: 0 50%;}
-}
 
 /*------------ galería (html)---------------------------*/
+.col-sm-12{
+  background-color: dimgray;
+}
 .container-fluid{ /*contenedor padre*/
-  background-color: black;
+  background-color: dimgray;
   margin-top: 180px;
   align-items: center;   
-  height: 700px;
-  }
-  h2{
-      text-shadow: 0 1px 0 rgba(255,255,255,0.3);
-      /*box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);*/
-  }
+  height: 660px;
+}
+img{
+  border-radius: 20px;
+}
+.col-sm-12 h1{
+  font-size: 40px;
+  font-family: Cormorant Infant;
+  font-style: italic;
+}
 
 /*------------ compras (html)--------------*/
-.flex-container{
-  height: max-content;
+section .back_gradient{
+  height: 10px;
 }
-.titulo_compras{
-  margin-top: 180px;
-  background-color: black;
-  text-align: left;
-  font-size: 50px;
+.flex-container{
+  margin-top: 170px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
+.titulo_compras h1{
+  font-size: 40px;
+  font-family: Cormorant Infant;
+  font-style: italic;
+  margin-top: 20px;
+  text-align: center;
   padding: 10px 20px;   
 }  
-
 .slogan_compras{
-  width: 60%;
-  flex: 50px;
-  /*background-color: beige;*/
-  padding: 50px;
+  width: 50%;
   margin-left: 80px; 
-  text-align: left;
-  font-size: 20px;
+  text-align: center;
+  font-size: 30px;
 }
 .slogan_compras p{
   font-family: 'Dancing Script', regular;
   font-size: 25px;
+  color: rgb(169, 207, 107);
+  margin-top: 10px;
 }
 .subtitulo_compras{
-  flex: 50px;
-  /*background-color: khaki;*/
   padding-left: 50px;
   font-family: Cormorant Infant;
   font-style: italic;
-  color: rgb(59, 59, 59);
   font-size: 18px;
 }
-.subtitulo_compras h2{
-  /*font-family: 'Special Elite', cursive;*/
+.subtitulo_compras h3{
   font-family: Cormorant Infant;
   padding-left: 50px;
-  
 }
 .mensajeCentral{
-  flex: 50px;
-  /*background-color: goldenrod;*/
+  font-family: Roboto;
+  font-style: normal;
+  font-size: 17px;
+  color: rgb(169, 207, 107);
   margin-left: 80px;
   text-align: left;
-  font-size: 18px;
 }
-
 .mensajeFinal{
-  flex: 50px;
-  /*background-color: goldenrod;*/
+  font-family: Roboto;
+  font-style: normal;
+  font-size: 17px;
+  color: rgb(169, 207, 107);
   margin-left: 80px;
   text-align: left;
-  font-size: 18px;
 }
 
 /*------------ boton whatsapp -------------*/
 .float{
-position:fixed;
-width:60px;
-height:60px;
-bottom:40px;
-right:40px;
-background-color:#25d366;
-color:#FFF;
-border-radius:50px;
-text-align:center;
+  position:fixed;
+  width:60px;
+  height:60px;
+  bottom:40px;
+  right:40px;
+  background-color:#25d366;
+  color:#FFF;
+  border-radius:50px;
+  text-align:center;
   font-size:30px;
-box-shadow: 2px 2px 3px #999;
+  box-shadow: 2px 2px 3px #999;
   z-index:100;
 }
 
@@ -339,16 +347,14 @@ margin-top:16px;
 
 /*------------ contacto (html)-------------*/
 .form{
-  background-color: #18A383;
+  /*background-color: #18A383;*/
   text-align: center;
   margin-top: 180px;
 }
-.form span h1{
-  background-color: black;
-}
 .form span h3{
-  font-size: 21px;
-  font-style: normal;
+  font-family: Roboto;
+  font-style: italic;
+  font-size: 20px;
 }
 input, textarea{
   outline: none;
@@ -360,8 +366,8 @@ input, textarea{
   padding: 10px;
 }
 form{ /*interior del form*/
-  background-color: white;
-  color: #999;
+  background-color: rgb(101, 104, 99);
+  color: black;
   font-size: 0.8em;
   padding: 20px;
   margin: 0 auto;
@@ -369,32 +375,34 @@ form{ /*interior del form*/
   border-radius: 5px;
 }  
 input{
-  background-color: #fbfbfb; 
+  background-color:khaki; 
   width: 408px; 
   height: 40px; 
   border-radius: 5px;  
   border-style: solid; 
-  border-width: 1px; 
-  border-color: #ab4493; 
+  border-width: 2px; 
+  border-color: black; 
   margin-top: 10px;  
   padding-left: 10px;
-  margin-bottom: 20px; 
+  margin-bottom: 20px;
 }
 textarea{
-  background-color: #fbfbfb; 
+  background-color: khaki; 
   width: 405px; 
-  height: 150px; 
+  height: 80px; 
   border-radius: 5px;  
   border-style: solid; 
   border-width: 1px; 
-  border-color: #ab4493; 
+  border-color: black; 
   margin-top: 10px;  
   padding-left: 10px;
   margin-bottom: 20px; 
   padding-top: 15px;
+  resize: none;
 }
 .field:focus{
-  border-color: #18A383;
+  border-color: blue;
+  border-width: 1px; 
 }
 .center-content{
   text-align: center;
@@ -413,38 +421,43 @@ textarea{
 }
 
 /*-------------- pie de pagina (todas) ---------------*/ 
-
 footer {
-  background-color: rgb(248, 248, 60);
+  background-color: rgb(83, 83, 83);
   margin-left: 0px;
-  padding: 50px;
-  top: 20px;
 }
-
+h2{
+  text-shadow: 0 1px 0 rgba(255,255,255,0.3);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.7);
+}
 .row{
   padding: 5px;
-  text-align: center;
-  
+  text-align: center; 
 }
 span{
   font-family: Inter;
   color: black;
   font-size: 14px;
-}
-.col-lg-4 h2{
-  text-shadow: 0 1px 0 rgba(255,255,255,0.3);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
+
+}
+iframe{
+  border-radius: 20px;
+}
+.col-lg-4 h2 p{
+  color: rgb(4, 6, 78);
+  /*box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);*/
 }
 
 /*----- display movile ------*/
 @media (max-width: 768px) {
+  /* --- header ---*/
   .logo_tienda { /* Logo de la tienda */
-      width: 200px;
-      height: 60px;
-      padding: 15px;
-      position: relative;
-      top: 10px;
-      left: 15px;
+    height: 60px;
+    padding: 10px;  
+    width: 150px;
+    position: relative;
+    top: 10px;
+    left: 0;
   }
   nav ul li a{
       color: black;
@@ -455,7 +468,9 @@ span{
   }
   .caja_barraNav {
       top: 30px;
+      right: 10px;
   }
+  /* ------ index.html -------- */
   h1{ /* Titulo */
       color: aqua;
       font-size: 35px;
@@ -474,6 +489,10 @@ span{
       font-size: 1.3rem;
       margin: 0 auto;
   }
+  .slogan span h3{
+    font-size: 1rem;
+    font-family: Inter;
+  }
   main section div ul li a{ /* diseño boton */
       margin: 6px;
       padding: 6px;
@@ -484,10 +503,54 @@ span{
       font-size: 18px;
       font-style: normal;
   }
-  /* footer */
-  container text-center{
+/*------- quienes_somos (html)--------*/
+  section{
+    height: auto;
+  }
+  
+  #container_qs{ /* contenedor padre QS */
+    text-align: center;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    grid-template-areas: 
+    "titulo" 
+    "img"
+    "parrafo_0" 
+    "sub_1" 
+    "parrafo_1" 
+    "sub_2"
+    "parrafo_2"
+  }
+  .imagen_derecha{
+    padding-left: 0;
+    padding-top: 10px;
+    align-items: center;
+  }  
+  /* ----- galeria ------*/
+  .container-fluid{ /*contenedor padre*/
+    background-color: dimgray;
+    margin-top: 180px;
+    align-items: center;   
+    height: auto;
+  }
+  /* ---- compras ---- */
+  .titulo_compras h1{
+    font-size: 35px;
+  }  
+  .slogan_compras{
+    width: 100%;
+    margin-left: 0; 
+    text-align: center;
+    font-size: 10px;
+  }
+  
+  /* ----- footer ----- */
+  .container text-center{
       display: none;
   }
+  /*footer{
+    visibility:hidden;
+  }*/
 }
   
 /*# sourceMappingURL=styles.css.map */
